--- a/sass/layout/_pane.scss
+++ b/sass/layout/_pane.scss
@@ -1,9 +1,9 @@
 .pane {
-    z-index: 2; 
-    transform: translate(-50%, -400%);
-    position: absolute;
-    overflow: hidden;
+  z-index: 2;
+  position: absolute;
+  overflow: hidden;
+  -webkit-transform: translate3d(0px, 0px, 0px) scale(0.0, 0.0);
+  transform: translate3d(0px, 0px, 0px) scale(0.0, 0.0);
+  opacity: 0;
+  transition: all .5s;
 }
-
-
-.clicked { transform: translate(-50%, -50%);};
