--- a/sass/layout/_settings.scss
+++ b/sass/layout/_settings.scss
@@ -1,9 +1,16 @@
 .settings {
   width: 37.5rem;
   height: 49.2rem;
-  top: 51.7%;
-  left: 35%;
-  //transform: translate(-50%, -50%) !important;
+  top: 36.2rem;
+  left: -8.1rem;
+  
+  &.clicked {
+    opacity: 1;
+    left: 41.5rem;
+    top: 14.36rem;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    transform: translate3d(0px, 0px, 0px);
+  }
 
   //override common set-up
   &__main-pane {
